# VariantCallFixer

./: README.md  pyproject.toml  setup.py
VariantCallFixer/: CLI.py  CommandLineParser.py  CreateVCF.py  Functions.py  Globals.py  HeaderEntries.py  ReadVCF.py  RowDict.py  SampleData.py  VCFSection.py  __init__.py
tests/: SCHUS4.2_FSC458.vcf  SCHUS4.2_FSC458_bases.txt  test.vcf  test_creation.py  test_reading.py
