[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VariantCallFixer"
readme = "README.md"
description = "VariantCallFixer: A toolkit for SNP calling XMFA files."
version = "1.0"
requires-python = ">= 3.8"
license = { file = "LICENSE"}
keywords = ["Bioinformatics", "SNP-typing", "sequence-data"]
authors = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
maintainers = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Anyone",
    "Topic :: Bioinformatics :: Variant Call Format",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Repository = "https://github.com/XJ-04561/VariantCallFixer.git"

# [project.scripts]
# VariantCallFixer = "VariantCallFixer.CLI:main"
